fix: V-001 security vulnerability (#2557)
Automated security fix generated by OrbisAI Security